# RifatCamPro

./: .gitignore  README.md  build_ipa.sh  project.yml
.github/workflows/: build-ios.yml
OBSPlugin/: CMakeLists.txt  plugin-main.cpp  rifatcam_source.cpp  rifatcam_source.h
RifatCamPro/: Info.plist  RifatCamPro.entitlements
RifatCamPro/App/: RifatCamProApp.swift
RifatCamPro/Managers/: BatteryManager.swift  ConnectionManager.swift  SettingsManager.swift
RifatCamPro/Models/: AppSettings.swift  CameraConfiguration.swift  NetworkConfiguration.swift  StreamingState.swift
RifatCamPro/Services/Camera/: CameraService.swift  FocusManager.swift  VideoEncoder.swift
RifatCamPro/Services/Network/: APIServer.swift  BonjourService.swift  HTTPRouter.swift  NetworkService.swift  QRCodeGenerator.swift  SpeedMonitor.swift  WebSocketServer.swift
RifatCamPro/Services/Security/: SecurityService.swift
RifatCamPro/Services/Streaming/: H264StreamingService.swift  MJPEGStreamingService.swift  RTSPService.swift  StreamManager.swift
RifatCamPro/Utilities/: Constants.swift  Extensions.swift
RifatCamPro/ViewModels/: HomeViewModel.swift  PairingViewModel.swift  SettingsViewModel.swift  StreamingViewModel.swift
RifatCamPro/Views/Components/: GlassCard.swift  StatusIndicator.swift
RifatCamPro/Views/Home/: ActionButton.swift  CameraPreviewView.swift  HomeView.swift  StatusBarView.swift
RifatCamPro/xcconfig/: Debug.xcconfig  Release.xcconfig
WindowsClient/RifatCamPro.Client/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RifatCamPro.Client.csproj
(+14 files in other folders)
